tests/fixtures/valid/docs_array_mutation.lby
fn main -> i64
    let xs array<i64> = [1, 2, 3]
    xs[0] = 10
    xs[len(xs) - 1] += 4
    xs[0] + xs[2]
